# idol_m-ster_live_server_management_bot

./: .gitignore  CLAUDE.md  alembic.ini  main.py  ops.py  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: init_db.py  main.py  modify.py  ops.py
app/cogs/: base_cog.py  event.py  preferences.py
app/common/: db_setting.py  user_message.py
app/config/: discord.py
app/entity/: event_entity.py  user_idol_preference_entity.py
app/model/: __init__.py  event.py  user_idol_preferences.py
app/modifications/: modifications_0001.py
app/ops/: ops_0000.py  ops_0001.py  ops_0002.py  ops_0003.py
app/repository/: event_repository.py  user_idol_preference_repository.py
app/service/: event_service.py  preferences_service.py
db/: setting.py
migrations/: env.py
migrations/versions/: e4c81ea92c4a_create_tables.py  e5549ff27a6d_create_tables.py
